# Rebound-Effect

./: LICENSE  README.md  data_scraper_cleaner.ipynb  pyproject.toml  rebound_effect_in_computation.ipynb
data/: AcceleratorWall_ASIC_hardware.csv  CarbonIntensity_DifferentEnergySources.csv  asic_miner_ASIC_hardware.csv  bitcoin-hashrate.csv  carbon-intensity-electricity_OurWorldInData.csv  hash-rate_30DayAverage_AllYears.json  ml_hardware.csv
